@@ -4,15 +4,15 @@
 <!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
 
 <strings>
-    <string id="30000">Hent album miniaturebilleder fra fanart.tv</string>
-    <string id="30001">Hent album miniaturebilleder fra Last.fm</string>
-    <string id="30002">Hent album anmeldelse fra</string>
-    <string id="30003">Foretrukken sprog</string>
-    <string id="30004">Hent album bedømmelse fra</string>
-    <string id="30005">Hent album stilarter fra</string>
-    <string id="30006">Hent album stemning fra</string>
-    <string id="30007">Hent album temaer fra</string>
-    <string id="30008">Hent album miniaturebilleder fra allmusic.com</string>
+    <string id="30000">Hent Miniaturebilleder til Albummer fra fanart.tv</string>
+    <string id="30001">Hent Miniaturebilleder til Albummer fra Last.fm</string>
+    <string id="30002">Hent Albumanmeldelse fra</string>
+    <string id="30003">Foretrukket Sprog</string>
+    <string id="30004">Hent Albumbedømmelse fra</string>
+    <string id="30005">Hent Albumstilarter fra</string>
+    <string id="30006">Hent Albumstemninger fra</string>
+    <string id="30007">Hent Albumtemaer fra</string>
+    <string id="30008">Hent Miniaturebilleder til Albummer fra allmusic.com</string>
     <string id="30009">Illustrationer</string>
-    <string id="30010">Hent album miniaturebilleder fra theaudiodb.com</string>
+    <string id="30010">Hent Miniaturebilleder til Albummer fra theaudiodb.com</string>
 </strings>
