@@ -10,6 +10,7 @@
     <string id="30003">Idioma preferido</string>
     <string id="30004">Obter a puntuación do álbum dende</string>
     <string id="30005">Obter os estilos do álbum dende</string>
+    <string id="30006">Obter Sonoridades do Álbum de</string>
     <string id="30007">Obter os temas do álbum dende</string>
     <string id="30008">Obter as miniaturas do álbum dende allmusic.com</string>
     <string id="30009">Ilustración</string>
