@@ -1,3 +1,6 @@
+[B]1.6.3[/B]
+Updated language files from Transifex
+
 [B]1.6.2[/B]
 Updated language files from Transifex
 
